<resources>
    <string name="AUTHOR">AUTHOR</string>
    <string name="CREDITS">CREDITS</string>
    <string name="FLASH_RECOVERY">FLASH RECOVERY</string>
    <string name="REBOOT">REBOOT</string>
    <string name="ROM_UPDATES">ROM &amp; UPDATES</string>
    <string name="FLASH">FLASH</string>
    <string name="BACKUP_AND_RESTORE">BACKUP &amp; RESTORE</string>
    <string name="DONATE">DONATE</string>
    <string name="FOLDERS">FOLDERS</string>
    <string name="FILES">FILES</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="UTILITIES">UTILITIES</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="CHANGELOG">CHANGELOG</string>
    <string name="COMMENTS">COMMENTS</string>
    <string name="RATE_AND_COMMENT">RATE AND COMMENT</string>
    <string name="PACKAGES_TO_FLASH">PACKAGES TO FLASH</string>
    <string name="TRANSLATORS">TRANSLATORS</string>
    <string name="GENERAL">GENERAL</string>
    <string name="APPEARANCE">APPEARANCE</string>
    <string name="DOWNLOAD">DOWNLOAD</string>
    <string name="UTILITES">UTILITES</string>
    <string name="CACHE">CACHE</string>
    <string name="MB">MB</string>
    <string name="EXT_SIZE">EXT SIZE</string>
    <string name="SWAP_SIZE">SWAP SIZE</string>
    <string name="DEVELOPER">DEVELOPER</string>
    <string name="SEE_ALL">SEE ALL</string>
    <string name="lastest_build">Latest Build:</string>
    <string name="app_name">MAD Manager</string>
    <string name="version">2.4.1</string>
    <string name="about">About</string>
    <string name="backuphint">Enter backup name</string>
    <string name="backup_note">Note: Backup name must contain only [0–9a–z_.–]</string>
    <string name="copyright">Copyright © 2012&#8211;13 MAD Team</string>
    <string name="create_backup">Create Backup</string>
    <string name="new_backup">New Backup</string>
    <string name="avail_memory">Avail. Memory</string>
    <string name="rom_backups">ROM Backups</string>
    <string name="rom_backups_des">Create and manage ROM backups</string>
    <string name="dnbtn">Download</string>
    <string name="newdownload">Download File</string>
    <string name="search">Search</string>
    <string name="selectfile">Select File</string>
    <string name="romlist">Download ROMs</string>
    <string name="romfilelist">ROM Releases</string>
    <string name="recoverylist">Flash Recovery</string>
    <string name="viewbtn">View Link</string>
    <string name="contentDescription">Image</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="partsd_activity">Partition SD card</string>
    <string name="partsd_activity_des">Partition SD card for storing apps in external partition</string>
    <string name="partition_sdcard_warning">WARNING: Partitioning SD card will erase all the data from phone\'s SD card, such as pictures, music, videos etc.</string>
    <string name="backup_before_restore">Backup ROM before restore</string>
    <string name="nick">Display name</string>
    <string name="comment_hint">Comment</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="download_interrupted">Download Interrupted</string>
    <string name="download_error">Download Error</string>
    <string name="download_appending">Appending parts into one file&#8230;</string>
    <string name="file_o">File</string>
    <string name="submit">Submit</string>
    <string name="enter_valid_comment">Enter valid comment and rating</string>
    <string name="cancel">Cancel</string>
    <string name="comments_activity">Comments</string>
    <string name="usernamehint">Enter nickname</string>
    <string name="nobackups">No backup found.</string>
    <string name="noroot">Your device doesn\'t appear to be rooted. This app requires root access to work.\n\nThe easiest way to find out how to root your device is to Google \"root device_model\" and look through results for an appropriate tutorial.</string>
    <string name="unable_to_get_root">MAD Manager is unable to get Superuser permission. This app require root access to work properly.</string>
    <string name="written_by">Written by</string>
    <string name="about_author">Email: ds.mudhar@gmail.com\nIf any issue, please email me!</string>
    <string name="motafoca">motafoca</string>
    <string name="motafoca_sum">Many thanks to motafoca for his support.</string>
    <string name="nend">nend</string>
    <string name="nend_sum">Many thanks to nend for developing MAD Developer\'s Portal and continuous help.</string>
    <string name="psyke83">psyke83</string>
    <string name="psyke83_sum">Many thanks to psyke83 for general assistance.</string>
    <string name="dir_exists">Directory already exists</string>
    <string name="error_loading_comments">Error while loading comments.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_comments">No comments.</string>
    <string name="invalidname">Enter a valid name</string>
    <string name="ok">OK</string>
    <string name="cwmrecovery">ClockworkMod Recovery</string>
    <string name="cwmrecovery_des">Flash ClockworkMod based recovery image</string>
    <string name="rebootrecovery">Reboot into Recovery</string>
    <string name="dlmode">Download Mode</string>
    <string name="dlmode_des">Reboot into Download Mode</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_des">Reboot device normally</string>
    <string name="reboot_confirm">Do you want to reboot your device?</string>
    <string name="recovery">Recovery</string>
    <string name="rebootrecovery_confirm">Do you want to reboot your device into recovery?</string>
    <string name="dlmode_confirm">Do you want to reboot your device into Download Mode?</string>
    <string name="downloadroms">Download ROMs</string>
    <string name="downloadroms_des">Download and flash custom ROMs available for your device</string>
    <string name="check_for_updates">Check for ROM updates</string>
    <string name="current_rom">Current ROM version:</string>
    <string name="unknown_o">Unknown</string>
    <string name="flash_update">Flash Update</string>
    <string name="flash_update_des">Flash zip file(s) from SD card</string>
    <string name="flash_baseband">Flash Baseband</string>
    <string name="confirm_flash_baseband">Do you want to flash this baseband?</string>
    <string name="current_baseband">Current Baseband:</string>
    <string name="donate">Donate</string>
    <string name="donate_des">Donate to MAD Team</string>
    <string name="unable_to_connect">Unable to connect. Please try again.</string>
    <string name="connection_error">An error occurred. Please try later.</string>
    <string name="no_update_info_error">No Developer or ROM information found from your ROM.</string>
    <string name="no_roms_found">No ROMs found</string>
    <string name="no_releases_found">No releases found</string>
    <string name="no_update_avail">No update found for your ROM</string>
    <string name="update_avail">ROM update available</string>
    <string name="update_avail_des">Update for ROM is available</string>
    <string name="md5_copied">MD5 copied to clipboard.</string>
    <string name="baseband_backups">Baseband Backups</string>
    <string name="baseband_backups_des">Create and manage Baseband backups</string>
    <string name="backup_baseband_confirm">Do you want to create a backup of your baseband?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preparing">Preparing&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="unable_to_comment">Unable to add comment.</string>
    <string name="comment_added_successfully">Comment added successfully</string>
    <string name="copying_needed_files">Copying needed files&#8230;</string>
    <string name="generating_command">Generating command&#8230;</string>
    <string name="rebooting_into_recovery">Rebooting into Recovery&#8230;</string>
    <string name="flashing">Flashing&#8230;</string>
    <string name="done">Done</string>
    <string name="reboot_recovery">Reboot Recovery</string>
    <string name="flash_cwm_success">Successfully flashed ClockworkMod Recovery on your device.</string>
    <string name="flash_cwm_not_sup">Sorry! Flashing ClockworkMod Recovery is not supported on your device yet.\n\nPlease contact developer.</string>
    <string name="flash_cwm_failed">Unable to flash Recovery. Make sure you have working internet connection, SD card mounted and device rooted.</string>
    <string name="flash_baseband_not_sup">Sorry! Flashing Baseband is not supported on your device yet.\n\nPlease contact developer.</string>
    <string name="flash_baseband_backup_not_sup">Sorry! Backing up baseband is not supported on your device yet.\n\nPlease contact developer.</string>
    <string name="flash_baseband_failed">Unable to read Baseband file. Make sure your SD card is mounted.</string>
    <string name="downloads">downloads</string>
    <string name="Downloads">Downloads</string>
    <string name="settings_update_noti">Update Notifications</string>
    <string name="settings_update_noti_sum">Receive notifications when ROM updates are available!</string>
    <string name="settings_fast_dls">Fast Download Mode</string>
    <string name="settings_fast_dls_sum">Use multiple connections for a download. Disable if you have problems while downloading.</string>
    <string name="settings_ext_storage">Use External Storage</string>
    <string name="settings_ext_storage_sum">Prefer usage of external storage over internal storage for ROM backups</string>
    <string name="settings_clear_dl_cache">Clear Download Cache</string>
    <string name="settings_clear_dl_cache_sum">Clear temporary download cache. All downloads will start from beginning</string>
    <string name="settings_dl_dir">Download Folder</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_des">Change theme of application. Requires restart</string>
    <string name="settings_connections">No. Of Connections</string>
    <string name="settings_connections_des">The number of connections for a download while in Fast Download mode\nNote: Temporary files will be cleared</string>
    <string name="settings_ics_notification">ICS Notification</string>
    <string name="settings_ics_notification_des">Use Ice Cream Sandwich style notification</string>
    <string name="settings_update_check_freq">Update Check Frequency</string>
    <string name="settings_update_check_freq_des">Set how often to check for ROM updates</string>
    <string name="select_frequency">Select frequency</string>
    <string name="select_theme">Select theme</string>
    <string name="no_google_account">No Google account</string>
    <string name="no_google_account_msg">No Google account found. This app requires your Google account, allowing you to rate and comment your favourite ROMs.\n\nPlease add a Google account and try again.</string>
    <string name="select_account">Select account</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="copy_md5">Copy MD5</string>
    <string name="sdcard_not_mounted">SD card not mounted.</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="mins">mins</string>
    <string name="min">min</string>
    <string name="ago">ago</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="verifying_md5">Verifying MD5&#8230;</string>
    <string name="restore_baseband_confirm">Do you want to restore this baseband backup?</string>
    <string name="delete_backup_confirm">Do you want to delete this backup?</string>
    <string name="partition">Partition</string>
</resources>