<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:orientation="vertical" ><LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:background="?newDownloadHeader"        android:orientation="horizontal" >        <ImageView            android:id="@+id/romicon"            style="@style/RomIcon"            android:contentDescription="@string/contentDescription"            android:src="@drawable/android" />        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_marginBottom="8.0dip"            android:layout_marginRight="10.0dip"            android:layout_marginTop="6.0dip"            android:orientation="vertical" >            <TextView                android:id="@+id/name"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:ellipsize="marquee"                android:fadingEdge="horizontal"                android:singleLine="true"                android:textAppearance="@style/TextAppearance.Large"                android:textColor="#fff"                android:textStyle="bold" />            <TextView                android:id="@+id/devname"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="@style/TextAppearance.Small"                android:textColor="#85ffffff"                android:textSize="16.0sp"                android:textStyle="bold" />        </LinearLayout>    </LinearLayout>    <View        android:layout_width="fill_parent"        android:layout_height="3dip"        android:background="?holoGreen" />    <LinearLayout        android:id="@+id/download_buttons"        android:layout_width="fill_parent"        android:layout_height="50dip"        android:background="?newDownloadHeader"        android:baselineAligned="false"        android:orientation="horizontal" >        <Button            android:id="@+id/downloadBt"            style="@style/DefaultButton"            android:layout_width="0dip"            android:layout_height="wrap_content"            android:layout_gravity="center_vertical"            android:layout_marginBottom="5dip"            android:layout_marginLeft="20dip"            android:layout_marginRight="10dip"            android:layout_marginTop="5.0dip"            android:layout_weight="1.0"            android:text="@string/dnbtn" />        <Button            android:id="@+id/viewLinkBt"            style="@style/DefaultButton"            android:layout_width="0dip"            android:layout_height="wrap_content"            android:layout_gravity="center_vertical"            android:layout_marginBottom="5dip"            android:layout_marginLeft="10dip"            android:layout_marginRight="20dip"            android:layout_marginTop="5dip"            android:layout_weight="1.0"            android:text="@string/viewbtn" />    </LinearLayout>    <LinearLayout        android:id="@+id/download_running"android:layout_width="fill_parent"        android:layout_height="50dip"        android:background="?newDownloadHeader"        android:baselineAligned="false"        android:orientation="horizontal"         android:visibility="gone" >       <Button            android:id="@+id/cancelBt"            style="@style/DefaultButton"            android:layout_width="0dip"            android:layout_height="wrap_content"            android:layout_gravity="center_vertical"            android:layout_marginBottom="5dip"            android:layout_marginLeft="20dip"            android:layout_marginRight="10dip"            android:layout_marginTop="5.0dip"            android:layout_weight="1.0"            android:text="@string/cancel" />        <Button            android:id="@+id/viewLinkBt2"            style="@style/DefaultButton"            android:layout_width="0dip"            android:layout_height="wrap_content"            android:layout_gravity="center_vertical"            android:layout_marginBottom="5dip"            android:layout_marginLeft="10dip"            android:layout_marginRight="20dip"            android:layout_marginTop="5dip"            android:layout_weight="1.0"            android:text="@string/viewbtn" />        </LinearLayout>        <View            android:layout_width="fill_parent"            android:layout_height="4dip"            android:background="?holoGreen" />        <ListView            android:id="@android:id/list"            android:layout_width="fill_parent"            android:layout_height="fill_parent"            android:cacheColorHint="@android:color/transparent"            android:clipToPadding="false"            android:drawSelectorOnTop="false"            android:listPreferredItemHeight="48.0dip"            android:scrollbarAlwaysDrawVerticalTrack="true"            android:scrollbarStyle="@integer/scrollbarStyle"            android:background="?newDownloadSeperatorBg" />    </LinearLayout>